# crosspoint-jp

./: .gitignore  .gitmodules  AGENTS.md  README-JA.md  README-ZH.md  README.md  USER_GUIDE.md  manifest_dev.json  manifest_stable.json  platformio.ini  requirements.txt
.claude/skills/: README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  dev-build.yml  release-fonts.yml  release.yml  release_candidate.yml
.skills/: SKILL.md
docs/: file-formats.md  hyphenation-trie-format.md  i18n.md  industrial_wireframes_v2.md  phase0_safety_audit_v2.md  phase2_ui_spec.md  phase3_implementation_plan.md  sd-card-fonts.md  translators.md  troubleshooting.md  webserver-endpoints.md  webserver.md
docs/contributing/: architecture.md
lib/EpdFont/: EpdFont.cpp  EpdFontData.h  FontDecompressor.cpp  FontDecompressor.h  SdCardFont.cpp  SdCardFont.h  SdCardFontManager.cpp  SdCardFontManager.h  SdCardFontRegistry.cpp  SdCardFontRegistry.h
lib/Epub/: Epub.cpp  Epub.h
lib/Epub/Epub/: Page.h  (+6 more)
lib/ExternalFont/: ExternalFont.cpp  ExternalFont.h  FontManager.cpp  FontManager.h
lib/GfxRenderer/: BitmapHelpers.cpp  BitmapHelpers.h  FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h  VerticalTextUtils.h  cjk_ui_font_20.h
lib/I18n/: I18nKeys.h  I18nStrings.h
lib/JsonParser/: ReleaseJsonParser.cpp  ReleaseJsonParser.h  StreamingJsonParser.cpp  StreamingJsonParser.h
lib/KOReaderSync/: ChapterXPathResolver.cpp  KOReaderJsonIO.cpp  KOReaderJsonIO.h  ProgressMapper.cpp
lib/Logging/: Logging.cpp  Logging.h
lib/Memory/: Memory.h
lib/Utf8/: Utf8.h  Utf8ComposeTable.h
lib/Xtc/: Xtc.cpp
lib/ZipFile/: ZipFile.cpp
lib/hal/: HalIMU.cpp  HalIMU.h  HalPowerManager.cpp  HalPowerManager.h  HalRTC.cpp  HalRTC.h  HalStorage.h
scripts/: convert_icon.py  debugging_monitor.py  firmware_size_history.py  generate-font-manifest.py  generate_cjk_ui_font.py  generate_hyphenation_trie.py  generate_kerning_ligature_epub.py  generate_supsub_test_epub.py  generate_test_bmps.py  generate_test_epub.py  patch_jpegdec.py  register_unit_tests_target.py  update_hyphenation.sh
scripts/jpegdec_patches/: 0001-redirect-pmcu-on-mcu-skip.patch  0002-guard-dc-writes-on-mcu-skip.patch
src/: AozoraIndexManager.cpp  AozoraIndexManager.h  CrossPointSettings.cpp  CrossPointSettings.h  FavoriteAuthorsManager.cpp  FontInstaller.cpp  JsonSettingsIO.cpp  MappedInputManager.cpp  MappedInputManager.h  ReadingStatusHelper.cpp  ReadingStatusHelper.h  SdCardFontGlobals.h  SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  SilentRestart.h  fontIds.h  main.cpp
src/activities/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityResult.h  (+1 more)
test/: CMakeLists.txt  README  run_differential_rounding_test.sh
test/differential_rounding/: CMakeLists.txt  DifferentialRoundingTest.cpp
test/epubs/: test_supsub.epub
test/hyphenation_eval/: CMakeLists.txt  HyphenationEvaluationTest.cpp
test/hyphenation_eval/resources/: generate_hyphenation_test_data.py  polish_hyphenation_tests.txt  swedish_hyphenation_tests.txt
test/language/RTL/: README.md  RTL_test.epub
test/release_json_parser/: CMakeLists.txt  ReleaseJsonParserTest.cpp
test/streaming_json_parser/: CMakeLists.txt  StreamingJsonParserTest.cpp
test/utf8_compose/: CMakeLists.txt  Utf8ComposeTest.cpp
(+196 files in other folders)
